[package]
name = "ru2"
version = "0.1.0"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
futures = "0.3.5"
tokio = { version = "1.0", features = ["macros", "fs", "time"] }
tokio-util = { version = "0.6.2", features = [ "io" ] }
tokio-stream = { version = "0.1.2", features = ["net"] }
bytes = "1.0"
tempfile = "3.1.0"

[dev-dependencies]
futures-test = "0.3.18"
itertools = "0.9.0"
